<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.edwinparedes.tarea_3_2.MainActivity"
    android:orientation="vertical"
    android:scrollbars="vertical"
    >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilNombreCompleto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/tieNombreCompleto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtNombreCompleto"
            style="@style/EditTheme"
            />
    </android.support.design.widget.TextInputLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtFechaNacimiento"
        android:labelFor="@+id/datFechaNacimiento"
        />
    <DatePicker
        android:id="@+id/datFechaNacimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        style="@android:style/Widget.DatePicker">

    </DatePicker>



    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/tieTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtTelefono"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/tieEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtEmail"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/tieDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtDescripcion"
            android:lines="2"
            />
    </android.support.design.widget.TextInputLayout>

    <Button

        android:text="@string/btnSiguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSiguiente"
        android:onClick="onSiguiente"
        />


</LinearLayout>
